syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt

    7 ExtDecList: VarDec
    8           | VarDec COMMA ExtDecList

    9 Specifier: TYPE
   10          | StructSpecifier

   11 StructSpecifier: STRUCT OptTag LC DefList RC
   12                | STRUCT Tag

   13 OptTag: ID
   14       | %empty

   15 Tag: ID

   16 VarDec: ID
   17       | VarDec LB INT RB

   18 FunDec: ID LP VarList RP
   19       | ID LP RP

   20 VarList: ParamDec COMMA VarList
   21        | ParamDec

   22 ParamDec: Specifier VarDec

   23 CompSt: LC DefList StmtList RC

   24 StmtList: Stmt StmtList
   25         | %empty

   26 Stmt: Exp SEMI
   27     | CompSt
   28     | RETURN Exp SEMI
   29     | IF LP Exp RP Stmt
   30     | IF LP Exp RP Stmt ELSE Stmt
   31     | WHILE LP Exp RP Stmt

   32 DefList: Def DefList
   33        | %empty

   34 Def: Specifier DecList SEMI
   35    | error SEMI

   36 DecList: Dec
   37        | Dec COMMA DecList

   38 Dec: VarDec
   39    | VarDec ASSIGNOP Exp
   40    | VarDec ASSIGNOP error

   41 Exp: Exp ASSIGNOP Exp
   42    | Exp AND Exp
   43    | Exp OR Exp
   44    | Exp RELOP Exp
   45    | Exp PLUS Exp
   46    | Exp MINUS Exp
   47    | Exp STAR Exp
   48    | Exp DIV Exp
   49    | LP Exp RP
   50    | MINUS Exp
   51    | NOT Exp
   52    | ID LP Args RP
   53    | ID LP RP
   54    | Exp LB Exp RB
   55    | Exp LB error RB
   56    | Exp DOT ID
   57    | ID
   58    | INT
   59    | FLOAT

   60 Args: Exp COMMA Args
   61     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 35 40 55
INT (258) 17 58
FLOAT (259) 59
ID (260) 13 15 16 18 19 52 53 56 57
SEMI (261) 4 5 26 28 34 35
COMMA (262) 8 20 37 60
ASSIGNOP (263) 39 40 41
RELOP (264) 44
PLUS (265) 45
MINUS (266) 46 50
STAR (267) 47
DIV (268) 48
AND (269) 42
OR (270) 43
DOT (271) 56
NOT (272) 51
TYPE (273) 9
LP (274) 18 19 29 30 31 49 52 53
RP (275) 18 19 29 30 31 49 52 53
LB (276) 17 54 55
RB (277) 17 54 55
LC (278) 11 23
RC (279) 11 23
STRUCT (280) 11 12
RETURN (281) 28
IF (282) 29 30
ELSE (283) 30
WHILE (284) 31
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
ExtDefList (33)
    on left: 2 3, on right: 1 2
ExtDef (34)
    on left: 4 5 6, on right: 2
ExtDecList (35)
    on left: 7 8, on right: 4 8
Specifier (36)
    on left: 9 10, on right: 4 5 6 22 34
StructSpecifier (37)
    on left: 11 12, on right: 10
OptTag (38)
    on left: 13 14, on right: 11
Tag (39)
    on left: 15, on right: 12
VarDec (40)
    on left: 16 17, on right: 7 8 17 22 38 39 40
FunDec (41)
    on left: 18 19, on right: 6
VarList (42)
    on left: 20 21, on right: 18 20
ParamDec (43)
    on left: 22, on right: 20 21
CompSt (44)
    on left: 23, on right: 6 27
StmtList (45)
    on left: 24 25, on right: 23 24
Stmt (46)
    on left: 26 27 28 29 30 31, on right: 24 29 30 31
DefList (47)
    on left: 32 33, on right: 11 23 32
Def (48)
    on left: 34 35, on right: 32
DecList (49)
    on left: 36 37, on right: 34 37
Dec (50)
    on left: 38 39 40, on right: 36 37
Exp (51)
    on left: 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58
    59, on right: 26 28 29 30 31 39 41 42 43 44 45 46 47 48 49 50 51
    54 55 56 60 61
Args (52)
    on left: 60 61, on right: 52 60


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

    9 Specifier: TYPE .

    $default  reduce using rule 9 (Specifier)


State 2

   11 StructSpecifier: STRUCT . OptTag LC DefList RC
   12                | STRUCT . Tag

    ID  shift, and go to state 8

    $default  reduce using rule 14 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt

    ID    shift, and go to state 13
    SEMI  shift, and go to state 14

    ExtDecList  go to state 15
    VarDec      go to state 16
    FunDec      go to state 17


State 7

   10 Specifier: StructSpecifier .

    $default  reduce using rule 10 (Specifier)


State 8

   13 OptTag: ID .
   15 Tag: ID .

    LC        reduce using rule 13 (OptTag)
    $default  reduce using rule 15 (Tag)


State 9

   11 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 18


State 10

   12 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 12 (StructSpecifier)


State 11

    0 $accept: Program $end .

    $default  accept


State 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 13

   16 VarDec: ID .
   18 FunDec: ID . LP VarList RP
   19       | ID . LP RP

    LP  shift, and go to state 19

    $default  reduce using rule 16 (VarDec)


State 14

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 15

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 20


State 16

    7 ExtDecList: VarDec .
    8           | VarDec . COMMA ExtDecList
   17 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 21
    LB     shift, and go to state 22

    $default  reduce using rule 7 (ExtDecList)


State 17

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 23

    CompSt  go to state 24


State 18

   11 StructSpecifier: STRUCT OptTag LC . DefList RC

    error   shift, and go to state 25
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    RC  reduce using rule 33 (DefList)

    Specifier        go to state 26
    StructSpecifier  go to state 7
    DefList          go to state 27
    Def              go to state 28


State 19

   18 FunDec: ID LP . VarList RP
   19       | ID LP . RP

    TYPE    shift, and go to state 1
    RP      shift, and go to state 29
    STRUCT  shift, and go to state 2

    Specifier        go to state 30
    StructSpecifier  go to state 7
    VarList          go to state 31
    ParamDec         go to state 32


State 20

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 21

    8 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 33

    ExtDecList  go to state 34
    VarDec      go to state 16


State 22

   17 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 35


State 23

   23 CompSt: LC . DefList StmtList RC

    error   shift, and go to state 25
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    INT     reduce using rule 33 (DefList)
    FLOAT   reduce using rule 33 (DefList)
    ID      reduce using rule 33 (DefList)
    MINUS   reduce using rule 33 (DefList)
    NOT     reduce using rule 33 (DefList)
    LP      reduce using rule 33 (DefList)
    LC      reduce using rule 33 (DefList)
    RC      reduce using rule 33 (DefList)
    RETURN  reduce using rule 33 (DefList)
    IF      reduce using rule 33 (DefList)
    WHILE   reduce using rule 33 (DefList)

    Specifier        go to state 26
    StructSpecifier  go to state 7
    DefList          go to state 36
    Def              go to state 28


State 24

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 25

   35 Def: error . SEMI

    SEMI  shift, and go to state 37


State 26

   34 Def: Specifier . DecList SEMI

    ID  shift, and go to state 33

    VarDec   go to state 38
    DecList  go to state 39
    Dec      go to state 40


State 27

   11 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 41


State 28

   32 DefList: Def . DefList

    error   shift, and go to state 25
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    INT     reduce using rule 33 (DefList)
    FLOAT   reduce using rule 33 (DefList)
    ID      reduce using rule 33 (DefList)
    MINUS   reduce using rule 33 (DefList)
    NOT     reduce using rule 33 (DefList)
    LP      reduce using rule 33 (DefList)
    LC      reduce using rule 33 (DefList)
    RC      reduce using rule 33 (DefList)
    RETURN  reduce using rule 33 (DefList)
    IF      reduce using rule 33 (DefList)
    WHILE   reduce using rule 33 (DefList)

    Specifier        go to state 26
    StructSpecifier  go to state 7
    DefList          go to state 42
    Def              go to state 28


State 29

   19 FunDec: ID LP RP .

    $default  reduce using rule 19 (FunDec)


State 30

   22 ParamDec: Specifier . VarDec

    ID  shift, and go to state 33

    VarDec  go to state 43


State 31

   18 FunDec: ID LP VarList . RP

    RP  shift, and go to state 44


State 32

   20 VarList: ParamDec . COMMA VarList
   21        | ParamDec .

    COMMA  shift, and go to state 45

    $default  reduce using rule 21 (VarList)


State 33

   16 VarDec: ID .

    $default  reduce using rule 16 (VarDec)


State 34

    8 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 8 (ExtDecList)


State 35

   17 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 46


State 36

   23 CompSt: LC DefList . StmtList RC

    INT     shift, and go to state 47
    FLOAT   shift, and go to state 48
    ID      shift, and go to state 49
    MINUS   shift, and go to state 50
    NOT     shift, and go to state 51
    LP      shift, and go to state 52
    LC      shift, and go to state 23
    RETURN  shift, and go to state 53
    IF      shift, and go to state 54
    WHILE   shift, and go to state 55

    $default  reduce using rule 25 (StmtList)

    CompSt    go to state 56
    StmtList  go to state 57
    Stmt      go to state 58
    Exp       go to state 59


State 37

   35 Def: error SEMI .

    $default  reduce using rule 35 (Def)


State 38

   17 VarDec: VarDec . LB INT RB
   38 Dec: VarDec .
   39    | VarDec . ASSIGNOP Exp
   40    | VarDec . ASSIGNOP error

    ASSIGNOP  shift, and go to state 60
    LB        shift, and go to state 22

    $default  reduce using rule 38 (Dec)


State 39

   34 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 61


State 40

   36 DecList: Dec .
   37        | Dec . COMMA DecList

    COMMA  shift, and go to state 62

    $default  reduce using rule 36 (DecList)


State 41

   11 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 11 (StructSpecifier)


State 42

   32 DefList: Def DefList .

    $default  reduce using rule 32 (DefList)


State 43

   17 VarDec: VarDec . LB INT RB
   22 ParamDec: Specifier VarDec .

    LB  shift, and go to state 22

    $default  reduce using rule 22 (ParamDec)


State 44

   18 FunDec: ID LP VarList RP .

    $default  reduce using rule 18 (FunDec)


State 45

   20 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 30
    StructSpecifier  go to state 7
    VarList          go to state 63
    ParamDec         go to state 32


State 46

   17 VarDec: VarDec LB INT RB .

    $default  reduce using rule 17 (VarDec)


State 47

   58 Exp: INT .

    $default  reduce using rule 58 (Exp)


State 48

   59 Exp: FLOAT .

    $default  reduce using rule 59 (Exp)


State 49

   52 Exp: ID . LP Args RP
   53    | ID . LP RP
   57    | ID .

    LP  shift, and go to state 64

    $default  reduce using rule 57 (Exp)


State 50

   50 Exp: MINUS . Exp

    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52

    Exp  go to state 65


State 51

   51 Exp: NOT . Exp

    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52

    Exp  go to state 66


State 52

   49 Exp: LP . Exp RP

    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52

    Exp  go to state 67


State 53

   28 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52

    Exp  go to state 68


State 54

   29 Stmt: IF . LP Exp RP Stmt
   30     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 69


State 55

   31 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 70


State 56

   27 Stmt: CompSt .

    $default  reduce using rule 27 (Stmt)


State 57

   23 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 71


State 58

   24 StmtList: Stmt . StmtList

    INT     shift, and go to state 47
    FLOAT   shift, and go to state 48
    ID      shift, and go to state 49
    MINUS   shift, and go to state 50
    NOT     shift, and go to state 51
    LP      shift, and go to state 52
    LC      shift, and go to state 23
    RETURN  shift, and go to state 53
    IF      shift, and go to state 54
    WHILE   shift, and go to state 55

    $default  reduce using rule 25 (StmtList)

    CompSt    go to state 56
    StmtList  go to state 72
    Stmt      go to state 58
    Exp       go to state 59


State 59

   26 Stmt: Exp . SEMI
   41 Exp: Exp . ASSIGNOP Exp
   42    | Exp . AND Exp
   43    | Exp . OR Exp
   44    | Exp . RELOP Exp
   45    | Exp . PLUS Exp
   46    | Exp . MINUS Exp
   47    | Exp . STAR Exp
   48    | Exp . DIV Exp
   54    | Exp . LB Exp RB
   55    | Exp . LB error RB
   56    | Exp . DOT ID

    SEMI      shift, and go to state 73
    ASSIGNOP  shift, and go to state 74
    RELOP     shift, and go to state 75
    PLUS      shift, and go to state 76
    MINUS     shift, and go to state 77
    STAR      shift, and go to state 78
    DIV       shift, and go to state 79
    AND       shift, and go to state 80
    OR        shift, and go to state 81
    DOT       shift, and go to state 82
    LB        shift, and go to state 83


State 60

   39 Dec: VarDec ASSIGNOP . Exp
   40    | VarDec ASSIGNOP . error

    error  shift, and go to state 84
    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52

    Exp  go to state 85


State 61

   34 Def: Specifier DecList SEMI .

    $default  reduce using rule 34 (Def)


State 62

   37 DecList: Dec COMMA . DecList

    ID  shift, and go to state 33

    VarDec   go to state 38
    DecList  go to state 86
    Dec      go to state 40


State 63

   20 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 20 (VarList)


State 64

   52 Exp: ID LP . Args RP
   53    | ID LP . RP

    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52
    RP     shift, and go to state 87

    Exp   go to state 88
    Args  go to state 89


State 65

   41 Exp: Exp . ASSIGNOP Exp
   42    | Exp . AND Exp
   43    | Exp . OR Exp
   44    | Exp . RELOP Exp
   45    | Exp . PLUS Exp
   46    | Exp . MINUS Exp
   47    | Exp . STAR Exp
   48    | Exp . DIV Exp
   50    | MINUS Exp .
   54    | Exp . LB Exp RB
   55    | Exp . LB error RB
   56    | Exp . DOT ID

    STAR  shift, and go to state 78
    DIV   shift, and go to state 79
    DOT   shift, and go to state 82
    LB    shift, and go to state 83

    $default  reduce using rule 50 (Exp)


State 66

   41 Exp: Exp . ASSIGNOP Exp
   42    | Exp . AND Exp
   43    | Exp . OR Exp
   44    | Exp . RELOP Exp
   45    | Exp . PLUS Exp
   46    | Exp . MINUS Exp
   47    | Exp . STAR Exp
   48    | Exp . DIV Exp
   51    | NOT Exp .
   54    | Exp . LB Exp RB
   55    | Exp . LB error RB
   56    | Exp . DOT ID

    DOT  shift, and go to state 82
    LB   shift, and go to state 83

    $default  reduce using rule 51 (Exp)


State 67

   41 Exp: Exp . ASSIGNOP Exp
   42    | Exp . AND Exp
   43    | Exp . OR Exp
   44    | Exp . RELOP Exp
   45    | Exp . PLUS Exp
   46    | Exp . MINUS Exp
   47    | Exp . STAR Exp
   48    | Exp . DIV Exp
   49    | LP Exp . RP
   54    | Exp . LB Exp RB
   55    | Exp . LB error RB
   56    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 74
    RELOP     shift, and go to state 75
    PLUS      shift, and go to state 76
    MINUS     shift, and go to state 77
    STAR      shift, and go to state 78
    DIV       shift, and go to state 79
    AND       shift, and go to state 80
    OR        shift, and go to state 81
    DOT       shift, and go to state 82
    RP        shift, and go to state 90
    LB        shift, and go to state 83


State 68

   28 Stmt: RETURN Exp . SEMI
   41 Exp: Exp . ASSIGNOP Exp
   42    | Exp . AND Exp
   43    | Exp . OR Exp
   44    | Exp . RELOP Exp
   45    | Exp . PLUS Exp
   46    | Exp . MINUS Exp
   47    | Exp . STAR Exp
   48    | Exp . DIV Exp
   54    | Exp . LB Exp RB
   55    | Exp . LB error RB
   56    | Exp . DOT ID

    SEMI      shift, and go to state 91
    ASSIGNOP  shift, and go to state 74
    RELOP     shift, and go to state 75
    PLUS      shift, and go to state 76
    MINUS     shift, and go to state 77
    STAR      shift, and go to state 78
    DIV       shift, and go to state 79
    AND       shift, and go to state 80
    OR        shift, and go to state 81
    DOT       shift, and go to state 82
    LB        shift, and go to state 83


State 69

   29 Stmt: IF LP . Exp RP Stmt
   30     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52

    Exp  go to state 92


State 70

   31 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52

    Exp  go to state 93


State 71

   23 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 23 (CompSt)


State 72

   24 StmtList: Stmt StmtList .

    $default  reduce using rule 24 (StmtList)


State 73

   26 Stmt: Exp SEMI .

    $default  reduce using rule 26 (Stmt)


State 74

   41 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52

    Exp  go to state 94


State 75

   44 Exp: Exp RELOP . Exp

    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52

    Exp  go to state 95


State 76

   45 Exp: Exp PLUS . Exp

    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52

    Exp  go to state 96


State 77

   46 Exp: Exp MINUS . Exp

    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52

    Exp  go to state 97


State 78

   47 Exp: Exp STAR . Exp

    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52

    Exp  go to state 98


State 79

   48 Exp: Exp DIV . Exp

    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52

    Exp  go to state 99


State 80

   42 Exp: Exp AND . Exp

    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52

    Exp  go to state 100


State 81

   43 Exp: Exp OR . Exp

    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52

    Exp  go to state 101


State 82

   56 Exp: Exp DOT . ID

    ID  shift, and go to state 102


State 83

   54 Exp: Exp LB . Exp RB
   55    | Exp LB . error RB

    error  shift, and go to state 103
    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52

    Exp  go to state 104


State 84

   40 Dec: VarDec ASSIGNOP error .

    $default  reduce using rule 40 (Dec)


State 85

   39 Dec: VarDec ASSIGNOP Exp .
   41 Exp: Exp . ASSIGNOP Exp
   42    | Exp . AND Exp
   43    | Exp . OR Exp
   44    | Exp . RELOP Exp
   45    | Exp . PLUS Exp
   46    | Exp . MINUS Exp
   47    | Exp . STAR Exp
   48    | Exp . DIV Exp
   54    | Exp . LB Exp RB
   55    | Exp . LB error RB
   56    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 74
    RELOP     shift, and go to state 75
    PLUS      shift, and go to state 76
    MINUS     shift, and go to state 77
    STAR      shift, and go to state 78
    DIV       shift, and go to state 79
    AND       shift, and go to state 80
    OR        shift, and go to state 81
    DOT       shift, and go to state 82
    LB        shift, and go to state 83

    $default  reduce using rule 39 (Dec)


State 86

   37 DecList: Dec COMMA DecList .

    $default  reduce using rule 37 (DecList)


State 87

   53 Exp: ID LP RP .

    $default  reduce using rule 53 (Exp)


State 88

   41 Exp: Exp . ASSIGNOP Exp
   42    | Exp . AND Exp
   43    | Exp . OR Exp
   44    | Exp . RELOP Exp
   45    | Exp . PLUS Exp
   46    | Exp . MINUS Exp
   47    | Exp . STAR Exp
   48    | Exp . DIV Exp
   54    | Exp . LB Exp RB
   55    | Exp . LB error RB
   56    | Exp . DOT ID
   60 Args: Exp . COMMA Args
   61     | Exp .

    COMMA     shift, and go to state 105
    ASSIGNOP  shift, and go to state 74
    RELOP     shift, and go to state 75
    PLUS      shift, and go to state 76
    MINUS     shift, and go to state 77
    STAR      shift, and go to state 78
    DIV       shift, and go to state 79
    AND       shift, and go to state 80
    OR        shift, and go to state 81
    DOT       shift, and go to state 82
    LB        shift, and go to state 83

    $default  reduce using rule 61 (Args)


State 89

   52 Exp: ID LP Args . RP

    RP  shift, and go to state 106


State 90

   49 Exp: LP Exp RP .

    $default  reduce using rule 49 (Exp)


State 91

   28 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 28 (Stmt)


State 92

   29 Stmt: IF LP Exp . RP Stmt
   30     | IF LP Exp . RP Stmt ELSE Stmt
   41 Exp: Exp . ASSIGNOP Exp
   42    | Exp . AND Exp
   43    | Exp . OR Exp
   44    | Exp . RELOP Exp
   45    | Exp . PLUS Exp
   46    | Exp . MINUS Exp
   47    | Exp . STAR Exp
   48    | Exp . DIV Exp
   54    | Exp . LB Exp RB
   55    | Exp . LB error RB
   56    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 74
    RELOP     shift, and go to state 75
    PLUS      shift, and go to state 76
    MINUS     shift, and go to state 77
    STAR      shift, and go to state 78
    DIV       shift, and go to state 79
    AND       shift, and go to state 80
    OR        shift, and go to state 81
    DOT       shift, and go to state 82
    RP        shift, and go to state 107
    LB        shift, and go to state 83


State 93

   31 Stmt: WHILE LP Exp . RP Stmt
   41 Exp: Exp . ASSIGNOP Exp
   42    | Exp . AND Exp
   43    | Exp . OR Exp
   44    | Exp . RELOP Exp
   45    | Exp . PLUS Exp
   46    | Exp . MINUS Exp
   47    | Exp . STAR Exp
   48    | Exp . DIV Exp
   54    | Exp . LB Exp RB
   55    | Exp . LB error RB
   56    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 74
    RELOP     shift, and go to state 75
    PLUS      shift, and go to state 76
    MINUS     shift, and go to state 77
    STAR      shift, and go to state 78
    DIV       shift, and go to state 79
    AND       shift, and go to state 80
    OR        shift, and go to state 81
    DOT       shift, and go to state 82
    RP        shift, and go to state 108
    LB        shift, and go to state 83


State 94

   41 Exp: Exp . ASSIGNOP Exp
   41    | Exp ASSIGNOP Exp .
   42    | Exp . AND Exp
   43    | Exp . OR Exp
   44    | Exp . RELOP Exp
   45    | Exp . PLUS Exp
   46    | Exp . MINUS Exp
   47    | Exp . STAR Exp
   48    | Exp . DIV Exp
   54    | Exp . LB Exp RB
   55    | Exp . LB error RB
   56    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 74
    RELOP     shift, and go to state 75
    PLUS      shift, and go to state 76
    MINUS     shift, and go to state 77
    STAR      shift, and go to state 78
    DIV       shift, and go to state 79
    AND       shift, and go to state 80
    OR        shift, and go to state 81
    DOT       shift, and go to state 82
    LB        shift, and go to state 83

    $default  reduce using rule 41 (Exp)


State 95

   41 Exp: Exp . ASSIGNOP Exp
   42    | Exp . AND Exp
   43    | Exp . OR Exp
   44    | Exp . RELOP Exp
   44    | Exp RELOP Exp .
   45    | Exp . PLUS Exp
   46    | Exp . MINUS Exp
   47    | Exp . STAR Exp
   48    | Exp . DIV Exp
   54    | Exp . LB Exp RB
   55    | Exp . LB error RB
   56    | Exp . DOT ID

    PLUS   shift, and go to state 76
    MINUS  shift, and go to state 77
    STAR   shift, and go to state 78
    DIV    shift, and go to state 79
    DOT    shift, and go to state 82
    LB     shift, and go to state 83

    $default  reduce using rule 44 (Exp)


State 96

   41 Exp: Exp . ASSIGNOP Exp
   42    | Exp . AND Exp
   43    | Exp . OR Exp
   44    | Exp . RELOP Exp
   45    | Exp . PLUS Exp
   45    | Exp PLUS Exp .
   46    | Exp . MINUS Exp
   47    | Exp . STAR Exp
   48    | Exp . DIV Exp
   54    | Exp . LB Exp RB
   55    | Exp . LB error RB
   56    | Exp . DOT ID

    STAR  shift, and go to state 78
    DIV   shift, and go to state 79
    DOT   shift, and go to state 82
    LB    shift, and go to state 83

    $default  reduce using rule 45 (Exp)


State 97

   41 Exp: Exp . ASSIGNOP Exp
   42    | Exp . AND Exp
   43    | Exp . OR Exp
   44    | Exp . RELOP Exp
   45    | Exp . PLUS Exp
   46    | Exp . MINUS Exp
   46    | Exp MINUS Exp .
   47    | Exp . STAR Exp
   48    | Exp . DIV Exp
   54    | Exp . LB Exp RB
   55    | Exp . LB error RB
   56    | Exp . DOT ID

    STAR  shift, and go to state 78
    DIV   shift, and go to state 79
    DOT   shift, and go to state 82
    LB    shift, and go to state 83

    $default  reduce using rule 46 (Exp)


State 98
